@@ -1,16 +1,0 @@
-
-package com.ivanllamas.SpringMVCDemo;
-
-
-public class Student {
-private String name;
-
-    public String getName() {
-        return name;
-    }
-
-    public void setName(String name) {
-        this.name = name;
-    }
-
-}
