@@ -11,6 +11,6 @@
         <br/>
         <br/>
         
-        Student name: th:text= ${studentName}
+        Student name: <span th:text="${param.studentName}"/>
     </body>
 </html>
